Fix photo centering on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1565,8 +1565,34 @@
       text-align: center;
     }
 
+    #main article #photo-gallery {
+      display: flex;
+      flex-wrap: wrap;
+    }
+
     #main article #photo-gallery a {
-      margin: 10px;
+      margin-left: auto;
+      margin-right: auto;
+      border: none;
+    }
+
+    #main article #photo-gallery a img {
+      padding: 5px;
+    }
+
+    #main article #video-gallery {
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    #main article #video-gallery a {
+      margin-left: auto;
+      margin-right: auto;
+      border: none;
+    }
+
+    #main article #video-gallery a img {
+      padding: 5px;
     }
 
 		@media screen and (max-width: 736px) {
